# ChineseColorPicker

./: .eslintignore  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc.yml  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/assets/css/: index.css
src/assets/fonts/: index.css
src/components/: ChineseColorItem.svelte
src/components/ChineseColor/: GridItem.svelte  SelectItem.svelte
src/data/: index.ts
src/types/: ChineseColor.d.ts
