[package]
name = "chinese_color_picker"
version = "0.0.0"
description = "A color picker for Zhongguose(中国色)."
authors = ["BTMuli <bt-muli@outlook.com>"]
license = "MIT"
repository = "https://github.com/BTMuli/ChineseColorPicker"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
